variables.Variables.scala.error
Compilation error:
Variables:4: error: value += is not a member of Int
  pas+=1;
     ^