variables.Variables.scala.code
val pas:Int=0;
while (isOverBaggle()==false) {
  forward();
  pas+=1;
}
pickupBaggle()
val retour:Int=0;
while (pas!=retour) {
  backward();
}